--- a/public/meetup.html
+++ b/public/meetup.html
@@ -1,6 +1,6 @@
 <head>
     <meta charset="utf-8" />
-    <title>Firebase Meetup Login</title>
+    <title>Firebase Meetup</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Roboto:300,400,700&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
