--- a/public/meetup.html
+++ b/public/meetup.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <title>Firebase Meetup</title>
@@ -35,3 +38,5 @@
         <section id="guestbook-container"></section>
     </div>
 </body>
+
+</html>
