--- a/public/meetup.html
+++ b/public/meetup.html
@@ -24,7 +24,7 @@
                 <a class="mr-5"></a>
                 <a class="mr-5"></a>
             </nav>
-            <button type="button" id="logoutButton" class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">Login
+            <button type="button" id="logoutButton" class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">Logout
                 <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                     class="w-4 h-4 ml-1" viewBox="0 0 24 24">
                     <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -42,19 +42,61 @@
 
                 <p class="mb-3 font-semibold text-lg"><i class="material-icons">calendar_today</i> November 17</p>
                 <p class="mb-3 font-semibold text-lg"><i class="material-icons">location_city</i> MIT WPU, Pune</p>
-                <!-- ADD THE RSVP BUTTON HERE -->
+                <p class="mt-3 mb-2 font-semibold text-lg">Are you planning to attend the Event?</p>
+
+                <div id="attendanceButton" class="inline-flex">
+                    <button type="button" id="yesAttend" class="text-white bg-orange-600 hover:bg-orange-700 inline-block text-center border border-transparent rounded-md py-2 px-8 font-medium mx-3">Yes
+                    </button>
+                    <button type="button" id="noAttend" class="text-white border border-orange-600 hover:border-orange-700 text-orange-600 hover:text-orange-700 hover:bg-gray-100 inline-block text-center border border-transparent rounded-md py-2 px-8 font-medium mx-3">No
+                    </button>
+                </div>
             </section>
+            <p class="font-semibold text-2xl col-span-3 mx-auto mt-12">We look forward to Seeing you in the event</p>
+
         </div>
 
 
         <hr />
 
-        <section id="description-container" class="w-full lg:w-5/6 mt-3">
+        <section id="description-container" class="w-full lg:w-5/6 my-3 mx-6 lg:mx-auto">
             <h2 class="text-xl font-semibold mx-auto">What we'll be doing</h2>
             <p>Join us for a day full of Firebase Hands-On Activities and Learnings!</p>
         </section>
 
-        <section id="guestbook-container"></section>
+        <hr />
+
+        <section id="attending-container" class="w-full lg:w-5/6 my-3 mx-auto">
+            <h2 class="text-xl font-semibold ml-3">Who all are going to attend</h2>
+
+            <ol id="attendeeEmails" class="list-decimal list-outside mx-auto ml-8">
+
+            </ol>
+        </section>
+
+        <hr />
+
+        <section id="discussion-container" class="w-full lg:w-5/6 mt-3 mx-auto">
+            <h2 class="text-xl font-semibold ml-3">Discussion</h2>
+
+            <div id="messagesBlock" class="ml-6">
+                <p class="hover:bg-gray-200 px-2 py-2 cursor-pointer my-3">
+                    <span>
+                        <b>John Doe: </b>
+                    </span>
+                    <span>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quae.
+                    </span>
+                </p>
+
+            </div>
+
+            <div class="input-group mb-3 mt-6">
+                <input type="text" id="messageText" class="form-control w-5/6" placeholder="Send a Message" aria-label="Send a Message" aria-describedby="sendMessageButton">
+                <button class="text-white border border-orange-600 hover:border-orange-700 text-orange-600 hover:text-orange-700 hover:bg-gray-100 inline-block text-center border border-transparent rounded-r-md py-2 px-8 font-medium" type="button" id="sendMessageButton">Send</button>
+            </div>
+
+        </section>
+
     </div>
 </body>
 
