--- a/public/meetup.html
+++ b/public/meetup.html
@@ -59,6 +59,7 @@
         <hr />
 
         <section id="description-container" class="w-full lg:w-5/6 my-3 mx-6 lg:mx-auto">
+            <h2 class="text-xl mx-auto mb-6">Hello <span id="loggedInEmail" class="font-semibold"></span></h2>
             <h2 class="text-xl font-semibold mx-auto">What we'll be doing</h2>
             <p>Join us for a day full of Firebase Hands-On Activities and Learnings!</p>
         </section>
