--- a/public/login.html
+++ b/public/login.html
@@ -91,6 +91,11 @@
     </div>
 </body>
 
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js "></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-analytics.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js "></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js "></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-functions.js"></script>
 <script src="/js/firebaseConfig.js"></script>
 <script src="/js/login.js"></script>
 
